<resources>
    <string name="app_name">MyProperty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_message">Connectez-vous a votre compte</string>
    <string name="input_mail">mail</string>
    <string name="input_password">mot de passe</string>
    <string name="start">Se Connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="input_nom">Nom</string>
    <string name="input_prenom">Preom</string>
    <string name="input_tell">Numero Telephone</string>
    <string name="refisterBtn">Créer compte</string>
    <string name="goLogin"> vous avez déja un compte ? Connectez-vous</string>
</resources>