<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="30dp"
    tools:context=".LoginFragment">


    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginTop="-100dp"
        android:src="@drawable/logo"

        />




    <EditText
        android:id="@+id/usermail_login"

        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:hint="@string/input_mail"
        android:minHeight="48dp"
        android:gravity="left"
        />

    <EditText
        android:id="@+id/userpassword_login"

        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:hint="@string/input_password"
        android:minHeight="48dp"
        android:gravity="left"
        android:inputType="textPassword"
        />

    <ProgressBar
        android:id="@+id/login_progressbar"

        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/login_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20dp"

        android:layout_marginTop="30dp"
        android:text="@string/start"/>


    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="Créer un compte"
        android:paddingEnd="60dp"
        android:paddingTop="10dp"
        android:textStyle="italic"
        />

</LinearLayout>